--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "2.2.1"
+    "eslint": "^7.24.0",
+    "prettier": "2.2.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
